# SM-IPC-DEMO

./: CMakeLists.txt
Executor/: CMakeLists.txt
Executor/src/: runner.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/HelloWorld/: HelloWorld.vcxproj  Source.cpp
HelloWorld/HelloWorld/Debug/: vc140.idb
HelloWorld/HelloWorld/Debug/HelloWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HelloWorld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HelloWorld/HelloWorld/x64/Debug/: vc140.idb
HelloWorld/HelloWorld/x64/Debug/HelloWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HelloWorld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
